Fixed styling bug: class listings were making the box overflow on hover because of the bottom border which was applied. Fixed by adding some padding to the enclosing element.

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -31,6 +31,12 @@ body.map {
       }
     }
   }
+  .listing_info {
+    li {
+      /* padding to allow for the bottom border applied to the link it contains on hover */
+      padding-bottom: 1px; 
+    }
+  }
   
   .page {
     background: #FEE6B8 none;
